[tool.poetry]
name = "blaise-nisra-case-mover"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pybase64 = "^1.1.4"
pysftp = "^0.2.9"
Flask = "^1.1.2"
google-cloud-storage = "^1.37.0"
python-dotenv = "^0.16.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
boto3 = "^1.17.40"
isort = "^5.8.0"
flake8 = "^3.9.0"
flake8-cognitive-complexity = "^0.1.0"
black = "^20.8b1"

[tool.isort]
multi_line_output = "3"
include_trailing_comma = "True"
line_length = "88"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
